--- a/Servicios/Servicios/Views/EnviaDetalleContratista.xaml
+++ b/Servicios/Servicios/Views/EnviaDetalleContratista.xaml
@@ -55,7 +55,8 @@
                 <Button Text="+" Grid.Row="1" Grid.Column="3"/>
             </Grid>
             <Button Text="Enviar" 
-                    
+                    BackgroundColor="#FACC2E"
+                    Margin="0,10,0,20"
                     HorizontalOptions="FillAndExpand"
                     VerticalOptions="Fill" Grid.Row="4"
                     Pressed="irMensaje"
