--- a/Servicios/Servicios/Views/SeleccionaFecha.xaml
+++ b/Servicios/Servicios/Views/SeleccionaFecha.xaml
@@ -61,7 +61,7 @@
                 </Picker.Items>
             </Picker>
             <Button Grid.Row="4" Grid.Column="1"  Text="Enviar" 
-                    BackgroundColor="#23911E" 
+                    BackgroundColor="#FACC2E" 
                     HorizontalOptions="Center"
                     VerticalOptions="Center"
                     Pressed="irMensaje"
