--- a/Servicios/Servicios/App.xaml
+++ b/Servicios/Servicios/App.xaml
@@ -9,9 +9,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <!--Global Styles-->
-            <Color x:Key="NavigationPrimary">#2196F3</Color>
+            <Color x:Key="NavigationPrimary">#FACC2E</Color>
             <Style TargetType="NavigationPage">
-                <Setter Property="BarBackgroundColor" Value="LightGray" />
+                <Setter Property="BarBackgroundColor" Value="Yellow" />
                 <Setter Property="BarTextColor" Value="Black" />
             </Style>
         </ResourceDictionary>
