--- a/Servicios/Servicios/Views/DetalleReserva.xaml
+++ b/Servicios/Servicios/Views/DetalleReserva.xaml
@@ -4,12 +4,14 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Servicios.Views.DetalleReserva">
+             x:Class="Servicios.Views.DetalleReserva"
+             Title="Detalle de tu reserva"
+             >
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*"/>
-                <RowDefinition Height="1*"/>
+                
                 <RowDefinition Height="3*"/>
                 <RowDefinition Height="3*"/>
                 <RowDefinition Height="3*"/>
@@ -32,12 +34,8 @@
                     
                     
                     />
-            <Label Grid.Row="1" Grid.Column="1" Text="Detalle de tu reserva"
-                   MaxLines="2"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center"
-                   />
-            <Grid  RowSpacing="0" Grid.Row="2" Grid.Column="1">
+            
+            <Grid  RowSpacing="0" Grid.Row="1" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="0.5*"/>
@@ -55,6 +53,25 @@
                        VerticalOptions="CenterAndExpand"/>
                 
             </Grid>
+            <Grid  RowSpacing="0" Grid.Row="2" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="0.5*"/>
+
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="8*"/>
+                </Grid.ColumnDefinitions>
+                <Button Grid.Row="0" Grid.Column="0"/>
+                <Label Grid.Row="1" Grid.Column="0" Text="Servicio" VerticalOptions="Start"/>
+                <Label Grid.Row="0" Grid.Column="1" Text="texto de ejemplo" 
+                       Grid.ColumnSpan="2"
+                       VerticalOptions="CenterAndExpand"/>
+
+            </Grid>
+
             <Grid  RowSpacing="0" Grid.Row="3" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
@@ -73,7 +90,6 @@
                        VerticalOptions="CenterAndExpand"/>
 
             </Grid>
-
             <Grid  RowSpacing="0" Grid.Row="4" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="1*"/>
@@ -92,25 +108,7 @@
                        VerticalOptions="CenterAndExpand"/>
 
             </Grid>
-            <Grid  RowSpacing="0" Grid.Row="5" Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="0.5*"/>
-
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="8*"/>
-                </Grid.ColumnDefinitions>
-                <Button Grid.Row="0" Grid.Column="0"/>
-                <Label Grid.Row="1" Grid.Column="0" Text="Servicio" VerticalOptions="Start"/>
-                <Label Grid.Row="0" Grid.Column="1" Text="texto de ejemplo" 
-                       Grid.ColumnSpan="2"
-                       VerticalOptions="CenterAndExpand"/>
-
-            </Grid>
-            <Grid  ColumnSpacing="0" Grid.Row="6" Grid.Column="1">
+            <Grid  ColumnSpacing="0" Grid.Row="5" Grid.Column="1">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     
@@ -133,7 +131,7 @@
 
             
             <Button 
-                Grid.Row="7" Grid.Column="1"
+                Grid.Row="6" Grid.Column="1"
                 Text="Confirmar" 
                 BackgroundColor="#FACC2E"
                 Margin="0,0,0,10"
