--- a/Servicios/Servicios/Views/EnviaDetalleContratista.xaml
+++ b/Servicios/Servicios/Views/EnviaDetalleContratista.xaml
@@ -4,11 +4,13 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Servicios.Views.EnviaDetalleContratista">
+             x:Class="Servicios.Views.EnviaDetalleContratista"
+             Title="Envia un detalle al contratista: "
+             >
     <ContentPage.Content>
         <Grid RowSpacing="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
+                
                 <RowDefinition Height="5*"/>
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="3*"/>
@@ -18,22 +20,17 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
-            <Label Text="Envia un detalle al contratista: "
-                VerticalOptions="Center" 
-                HorizontalOptions="CenterAndExpand"
-                Grid.Row="0"
-                Grid.Column="0"
-                   />
+            
             <Editor Placeholder="Especifica el detalle del servicio que requiere..."
-                   Grid.Row="1" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
+                   Grid.Row="0" Grid.Column="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"
                    
                    />
             <Label Text="Agrega una foto: " 
-                   Grid.Row="2" Grid.Column="0"
+                   Grid.Row="1" Grid.Column="0"
                    HorizontalOptions="Start"
                    VerticalOptions="CenterAndExpand"
                    />
-            <Grid Grid.Row="3" Grid.Column="0">
+            <Grid Grid.Row="2" Grid.Column="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="2*"/>
@@ -58,7 +55,7 @@
                     BackgroundColor="#FACC2E"
                     Margin="0,10,0,20"
                     HorizontalOptions="FillAndExpand"
-                    VerticalOptions="Fill" Grid.Row="4"
+                    VerticalOptions="Fill" Grid.Row="3"
                     Pressed="irMensaje"
                     Grid.Column="0"/>
         </Grid>
