--- a/Servicios/Servicios/Views/SeleccionaContratista.xaml
+++ b/Servicios/Servicios/Views/SeleccionaContratista.xaml
@@ -4,18 +4,17 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
-             x:Class="Servicios.Views.SeleccionaContratista">
+             x:Class="Servicios.Views.SeleccionaContratista"
+             Title="Seleccionar contratista">
     <ContentPage.Content>
         <Grid RowSpacing="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="1*"/>
+                
                 <RowDefinition Height="7*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Label 
-                Grid.Row="0"
-                Text="Seleccionar contratista" VerticalOptions="Center" HorizontalOptions="Center"/>
-            <ListView Grid.Row="1"
+            
+            <ListView Grid.Row="0"
                 ItemsSource="{Binding datos}"
                 HasUnevenRows="True"
                 >
@@ -62,7 +61,7 @@
             </ListView.ItemTemplate>
             
         </ListView>
-            <Button Grid.Row="2" Text="Enviar" HorizontalOptions="FillAndExpand"
+            <Button Grid.Row="1" Text="Enviar" HorizontalOptions="FillAndExpand"
                     VerticalOptions="FillAndExpand" BackgroundColor="#FACC2E"
                     Pressed="irEnviaDetalleContratista"
                     />
